--- a/VB-FEST/VB-FEST.vbproj
+++ b/VB-FEST/VB-FEST.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{17FF18A6-4171-4576-9CD4-A9FE2534DEE3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>VB_FEST.Go_To_Statement</StartupObject>
+    <StartupObject>VB_FEST.String_object</StartupObject>
     <RootNamespace>VB_FEST</RootNamespace>
     <AssemblyName>VB-FEST</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -78,6 +78,7 @@
     <Compile Include="Data_type.vb" />
     <Compile Include="Do_Until_Loop.vb" />
     <Compile Include="Do_While_Loop.vb" />
+    <Compile Include="EnumProgram.vb" />
     <Compile Include="Exit_Statement.vb" />
     <Compile Include="For_Each_loop.vb" />
     <Compile Include="For_Next_Loop.vb" />
@@ -112,6 +113,7 @@
     <Compile Include="Operators.vb" />
     <Compile Include="Operator_Precedence.vb" />
     <Compile Include="Select_Case_Statement.vb" />
+    <Compile Include="String_object.vb" />
     <Compile Include="Type_Conversion_Functions.vb" />
     <Compile Include="Variables.vb" />
     <Compile Include="While_End_Loop.vb" />
